--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "nesine-case-study",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "keywords": [],
   "author": "",
@@ -14,29 +17,55 @@
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
+    "@svgr/webpack": "^8.1.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.0",
     "html-webpack-plugin": "^5.5.1",
+    "html-webpack-skip-assets-plugin": "^1.0.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.0.1",
     "postcss": "^8.4.23",
+    "prettier": "3.0.3",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
     "tailwindcss": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "typescript": "*",
     "webpack": "^5.83.1",
-    "webpack-cli": "^5.1.1",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-router-dom": "^5.3.3",
     "css-loader": "^6.7.4",
     "postcss-loader": "^7.3.0",
     "postcss-preset-env": "^8.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
     "style-loader": "^3.3.3"
   }
 }
