--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,33 @@
-// tsconfig.json
-
 {
   "compilerOptions": {
-    "jsx": "react-jsx"
-  }
+    "baseUrl": ".",
+    "target": "ES5",
+    "strict": true,
+    "noEmit": true,
+    "allowJs": true,
+    "module": "ESNext",
+    "jsx": "react-jsx",
+    "skipLibCheck": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "downlevelIteration": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "paths": {
+      "@/*": ["./*"]
+    }
+  },
+  "include": ["./**/*.js", "./**/*.ts", "./**/*.tsx"],
+  "exclude": [
+    "node_modules",
+    "public",
+    "build",
+    ".husky",
+    ".storybook",
+    "coverage"
+  ]
 }
