--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack serve --mode development",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cypress:open": "cypress open"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
@@ -26,6 +27,7 @@
     "@typescript-eslint/parser": "^6.8.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
+    "cypress": "^13.5.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
