--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.0.1",
     "postcss": "^8.4.23",
+    "postcss-nesting": "^12.0.1",
     "prettier": "3.0.3",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
@@ -61,6 +62,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "clsx": "^2.0.0",
     "css-loader": "^6.7.4",
     "postcss-loader": "^7.3.0",
     "postcss-preset-env": "^8.4.1",
